--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,13 +1,16 @@
 <h1>Slack Secret Santa</h1>
 
 
-<ul>
+<form action="" method="post">
+    <ul>
+        {% for user in users %}
+            <li>
+                <input type="checkbox" name="users[]" value="{{ user.id }}"> {{ user.id }}: {{ user.name }}
+            </li>
+        {% else %}
+            <li>Woups, no users?</li>
+        {% endfor %}
+    </ul>
 
-{% for user in users %}
-    <li>
-        {{ user.id }}: {{ user.name }}
-    </li>
-{% else %}
-    <li>Woups, no users?</li>
-{% endfor %}
-</ul>
+    <input type="submit" value="Secret Santa!">
+</form>
