Marketing, display, logo, favicon, message formating

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -10,7 +10,9 @@
             someone from outside the company to be our "Secret Santa", running a script and sending emails to everyone.</p>
         <p>This time is gone! With this Slack application, just select the peoples you want to do a Secret Santa with,
             and let <a href="https://github.com/jolicode/slack-secret-santa/blob/master/src/Rudolph.php">Rudolph</a> decide and notify, by private message, each user.</p>
-        <p>This application does not store anything and is integrally open-source.</p>
+
+        <p>This application does <u>not store anything</u>, does not need registration, does not send spam
+            and is integrally <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>.</p>
 
         <p>
             <a class="btn btn-success btn-lg" href="{{ path('run') }}" role="button">
