--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -25,9 +25,13 @@
 <body>
 
 <div class="container">
-    <h1>
+    <a href="/">
+        <img src="/images/logo.png" class="pull-left" style="width: 120px;" alt="Secret Santa" />
+    </a>
+
+    <h1 style="margin-bottom: 50px;">
         Slack Secret Santa
-        <small>Throw a Secret Santa with your Slack friends in a click of a button!</small>
+        <br><small>Throw a Secret Santa with your Slack friends in a click of a button!</small>
     </h1>
 
     {% block content %}
@@ -40,6 +44,8 @@
                     Emoji and logo provided free by <a href="http://emojione.com">Emoji One</a>
                     &dash;
                     Make with ♥ by <a href="http://jolicode.com">JoliCode</a>
+                    &dash;
+                    This project is <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>, pull request are welcome!
                 </small>
             </div>
         </div>
