Remove useless permission, add sample image and help

--- a/views/run.html.twig
+++ b/views/run.html.twig
@@ -27,7 +27,17 @@
             <div class="panel panel-default">
                 <div class="panel-heading">What happens next?</div>
                 <div class="panel-body">
-                    We are going to shuffle selected users and send them all a privage message in Slack, looking like this:
+                    <p>
+                        We are going to shuffle selected users and send them all a private message in Slack, looking like this:
+                    </p>
+
+                    <p class="text-center">
+                        <img src="/images/sample.png" alt="Slack Secret Santa Sample" class="img-thumbnail" />
+                    </p>
+
+                    <p>
+                        Anything else is up to you, have fun!
+                    </p>
                 </div>
             </div>
 
