Better front page with screenshots

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -23,4 +23,31 @@
             <a class="btn btn-default btn-sm" href="https://en.wikipedia.org/wiki/Secret_Santa" role="button">Learn more about Secret Santa</a>
         </p>
     </div>
+
+    <div class="page-header">
+        <h2>How does it works?</h2>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="thumbnail">
+                <img src="/images/sample2.png" alt="" />
+                <div class="caption">
+                    <h3>Select a group of people</h3>
+                    <p>We fetch all the users from your Slack account and show them to you (excluding the bots, because they don't do nice gifts).</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="thumbnail">
+                <img src="/images/sample.png" alt="" />
+                <div class="caption">
+                    <h3>Send the messages!</h3>
+                    <p>After a bit of shuffle and sort, we throw at each participant a private message with his peer name and optional admin message.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 {% endblock content %}
