--- a/views/finish.html.twig
+++ b/views/finish.html.twig
@@ -1,7 +1,26 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <div class="alert alert-success" role="alert">
-        <p>Well done! All messages were sent.</p>
-    </div>
+    {% if result %}
+        {% if result.isOk %}
+            <div class="alert alert-success" role="alert">
+                <p>Well done! All messages were sent.</p>
+            </div>
+        {% else %}
+            <div class="alert alert-danger" role="alert">
+                <p>An technical error occurred when sending messages to users: "{{ result.error }}"</p>
+            </div>
+            <p>
+                Here is the list of users that were not informed:
+                <ul>
+                    {% for giver,receiver in result.remainingAssociations %}
+                        <li><strong>@{{ giver }}</strong> should offer a gift to <strong>@{{ receiver }}</strong></li>
+                    {% endfor %}
+                </ul>
+            </p>
+            <p>
+                Sorry for the inconvenience, you will need to contact them <strong>manually</strong>.
+            </p>
+        {% endif %}
+    {% endif %}
 {% endblock content %}
