--- a/views/run.html.twig
+++ b/views/run.html.twig
@@ -9,7 +9,7 @@
                     <div class="list-group checked-list-box">
                         {% for user in users if not user.isBot and not user.deleted %}
                             <label class="list-group-item" for="user-{{ user.id }}">
-                                <input type="checkbox" name="users[]" value="{{ user.id }}" id="user-{{ user.id }}">
+                                <input type="checkbox" name="users[]" value="{{ user.name }}" id="user-{{ user.id }}">
                                 <img src="{{ user.profile.image32 }}" alt="{{ user.profile.realName }}" />
                                 <span>{{ user.profile.realName }} ({{ user.name }})</span>
                             </label>
