--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -25,7 +25,7 @@
 <body>
 
 <div class="container">
-    <a href="/">
+    <a href="{{ path('homepage') }}">
         <img src="/images/logo.png" class="pull-left" style="width: 120px;" alt="Secret Santa" />
     </a>
 
@@ -51,12 +51,5 @@
         </div>
     </footer>
 </div>
-
-
-<!-- Latest compiled and minified JavaScript
-Add jQuery too.
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
--->
-
 </body>
 </html>
