Add some text on the homepage

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -11,9 +11,6 @@
         <p>This time is gone! With this Slack application, just select the peoples you want to do a Secret Santa with,
             and let <a href="https://github.com/jolicode/slack-secret-santa/blob/master/src/Rudolph.php">Rudolph</a> decide and notify, by private message, each user.</p>
 
-        <p>This application does <u>not store anything</u>, does not need registration, does not send spam
-            and is integrally <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>.</p>
-
         <p>
             <a class="btn btn-success btn-lg" href="{{ path('run') }}" role="button">
                 <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
@@ -42,12 +39,13 @@
             <div class="thumbnail">
                 <img src="/images/sample.png" alt="" />
                 <div class="caption">
-                    <h3>Send the messages!</h3>
+                    <h3>We send the messages!</h3>
                     <p>After a bit of shuffle and sort, we throw at each participant a private message with his peer name and optional admin message.</p>
+
+                    <h3>You enjoy gifts, love and sharing</h3>
+                    <p>Whatever the reason (Christmas is not the only season in the year), Secret Santa is about sharing and having a good time!</p>
                 </div>
             </div>
         </div>
     </div>
-
-
 {% endblock content %}
