--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -40,13 +40,18 @@
     <footer style="margin-top: 100px;">
         <div class="panel panel-default">
             <div class="panel-body">
-                <small>
-                    Emoji and logo provided free by <a href="http://emojione.com">Emoji One</a>
-                    &dash;
-                    Make with ♥ by <a href="http://jolicode.com">JoliCode</a>
-                    &dash;
-                    This project is <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>, pull request are welcome!
-                </small>
+                <p>
+                    <small>
+                        Emoji and logo provided free by <a href="http://emojione.com">Emoji One</a>
+                        &dash;
+                        Make with ♥ by <a href="http://jolicode.com">JoliCode</a>
+                    </small>
+                </p>
+
+                <p>
+                    <small>This application does not persist anything on disk, does not use web analytics, does not need any registration, does not send spam
+                        and is integrally <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>.</small>
+                </p>
             </div>
         </div>
     </footer>
