Add snow :snowflake: :snowflake: :snowflake: :snowflake: :snowflake:

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -18,6 +18,7 @@
                 <span class="glyphicon glyphicon-star" aria-hidden="true"></span></a>
             <a class="btn btn-default btn-sm" href="https://github.com/jolicode/slack-secret-santa/" role="button">Show me the code</a>
             <a class="btn btn-default btn-sm" href="https://en.wikipedia.org/wiki/Secret_Santa" role="button">Learn more about Secret Santa</a>
+            <a class="btn btn-default btn-sm" href="javascript:goSnow();return false;" role="button">Let it snow!</a>
         </p>
     </div>
 
