Just add some padding :kissing_heart:

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -45,7 +45,7 @@
 
 <div class="container">
     <a href="{{ path('homepage') }}">
-        <img src="/images/logo.png" class="pull-left" style="width: 120px;" alt="Secret Santa" />
+        <img src="/images/logo.png" class="pull-left" style="width: 120px; padding-top: 10px;" alt="Secret Santa" />
     </a>
 
     <h1 style="margin-bottom: 50px;">
