--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -50,7 +50,7 @@
 
     <h1 style="margin-bottom: 50px;">
         Slack Secret Santa
-        <br><small>Throw a Secret Santa with your Slack friends in a click of a button!</small>
+        <br><small>Throw a Secret Santa with your Slack team in a click of a button!</small>
     </h1>
 
     {% block content %}
@@ -62,14 +62,14 @@
                 <p>
                     <small>
                         Emoji and logo provided free by <a href="http://emojione.com">Emoji One</a>
-                        &dash;
+                        &mdash;
                         Make with ♥ by <a href="http://jolicode.com">JoliCode</a>
+                        &mdash;
+                        This application does not persist anything on disk, does not use web analytics, does not need any registration, does not send spam, does not collect any kind of personal information and is integrally <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>.
+                        &mdash;
+                        Support is available via <a href="https://github.com/jolicode/slack-secret-santa/issues">GitHub</a> or
+                        <a href="https://jolicode.com/contact">private contact</a>.
                     </small>
-                </p>
-
-                <p>
-                    <small>This application does not persist anything on disk, does not use web analytics, does not need any registration, does not send spam
-                        and is integrally <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>.</small>
                 </p>
             </div>
         </div>
