--- a/views/finish.html.twig
+++ b/views/finish.html.twig
@@ -2,36 +2,40 @@
 
 {% block content %}
     {% if result %}
-        {% if result.isOk %}
-            <div class="alert alert-success" role="alert">
-                <p>Well done! All messages were sent.</p>
+        <div class="content result-block">
+            {% if result.isOk %}
+                <h2>Well done! All messages were sent.</h2>
+            {% else %}
+                <h2>A technical error occurred when sending messages to users</h2>
+
+                <div class="result-error">
+                    <p>
+                        "{{ result.error }}"
+                    </p>
+
+                    <p>
+                        Here is the list of users that were not informed:
+                    </p>
+
+                    <ul>
+                        {% for giver,receiver in result.remainingAssociations %}
+                            <li><strong>@{{ giver }}</strong> should offer a gift to <strong>@{{ receiver }}</strong></li>
+                        {% endfor %}
+                    </ul>
+
+                    <p>
+                        Sorry for the inconvenience, you will need to contact them <strong>manually</strong>.
+                        <a href="https://github.com/jolicode/slack-secret-santa/issues">Let us know too!</a>
+                    </p>
+                </div>
+            {% endif %}
+
+            <div class="is-center">
+                <a href="{{ path('run') }}" class="btn-submit">
+                    <span class="fa fa-repeat" aria-hidden="true"></span>
+                    Start another Secret Santa
+                </a>
             </div>
-        {% else %}
-            <div class="alert alert-danger" role="alert">
-                <p>A technical error occurred when sending messages to users: "{{ result.error }}"</p>
-            </div>
-
-            <p>
-                Here is the list of users that were not informed:
-            </p>
-
-            <ul>
-                {% for giver,receiver in result.remainingAssociations %}
-                    <li><strong>@{{ giver }}</strong> should offer a gift to <strong>@{{ receiver }}</strong></li>
-                {% endfor %}
-            </ul>
-
-            <p>
-                Sorry for the inconvenience, you will need to contact them <strong>manually</strong>. <a
-                        href="https://github.com/jolicode/slack-secret-santa/issues">Let us know too!</a>
-            </p>
-        {% endif %}
-
-        <div class="text-center">
-            <a class="btn btn-success btn-lg" href="{{ path('run') }}" role="button">
-                <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                Start another Secret Santa
-                <span class="glyphicon glyphicon-star" aria-hidden="true"></span></a>
         </div>
     {% endif %}
 {% endblock content %}
