--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -2,48 +2,81 @@
 
 {% block content %}
     <div class="jumbotron">
-        <h1>Merry Christmas!</h1>
+        <h1>Throw a Secret Santa with your Slack team!</h1>
 
-        <p>Secret Santa is a Western Christmas tradition in which members of a group or
-            community are randomly assigned a person to whom they anonymously give a gift.</p>
-        <p>At <a href="http://jolicode.com/">JoliCode</a>, we do this every year, and every year we have to ask
-            someone from outside the company to be our "Secret Santa", running a script and sending emails to everyone.</p>
-        <p>This time is gone! With this Slack Application, just select the peoples you want to do a Secret Santa with,
-            and let <a href="https://github.com/jolicode/slack-secret-santa/blob/master/src/Rudolph.php">Rudolph</a> decide and notify, by private message, each user.</p>
+        <q><strong>Secret Santa</strong> is a Western Christmas tradition in which members of a group or
+            community are <strong>randomly</strong> assigned a person to whom they anonymously <strong>give a gift</strong>.</q>
 
-        <p>
-            <a href="{{ path('run') }}"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
-            <a class="btn btn-default btn-sm" href="https://github.com/jolicode/slack-secret-santa/" role="button">Show me the code</a>
-            <a class="btn btn-default btn-sm" href="https://en.wikipedia.org/wiki/Secret_Santa" role="button">Learn more about Secret Santa</a>
-            <a class="btn btn-default btn-sm" onclick="goSnow();" href="#" role="button">Let it snow!</a>
-        </p>
+        <a class="action" href="{{ path('run') }}">
+            <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
+        </a>
     </div>
 
-    <div class="page-header">
-        <h2>How does it works?</h2>
-    </div>
+    <div class="content how-block">
+        <h2 class="content-head is-center">How does it works?</h2>
 
-    <div class="row">
-        <div class="col-md-6">
-            <div class="thumbnail">
-                <img src="/images/sample2.png" alt="" />
-                <div class="caption">
-                    <h3>Select a group of people</h3>
-                    <p>We fetch all the users from your Slack team and show them to you (excluding the bots, because they don't do nice gifts).</p>
-                </div>
+        <div class="pure-g">
+            <div class="how-item pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                <span class="content-subhead">
+                    <i class="fa fa-plug"></i>
+                    Connect to your Slack
+                </span>
+                <p>
+                    Authorize the app to access your Slack team.
+                </p>
+            </div>
+            <div class="how-item pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                <span class="content-subhead">
+                    <i class="fa fa-users"></i>
+                    Select users
+                </span>
+                <p>
+                    We show you all your Slack users (<small>excluding the bots, because they don't do nice gifts</small>). Just select which users will take part to your secret santa.
+                </p>
+            </div>
+            <div class="how-item pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                <span class="content-subhead">
+                    <i class="fa fa-check"></i>
+                    Inform users
+                </span>
+                <p>
+                    After <a href="https://github.com/jolicode/slack-secret-santa/blob/master/src/Rudolph.php">Rudolph</a> shuffled the users, we throw at each participant a private message with his peer name and an optional admin message.
+                </p>
+            </div>
+            <div class="how-item pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                <span class="content-subhead">
+                    <i class="fa fa-shopping-cart"></i>
+                    Buy a gift
+                </span>
+                <p>
+                    Everything is now setup. Just go buy a gift for your peer before your party. Merry Christmas!
+                </p>
             </div>
         </div>
-        <div class="col-md-6">
-            <div class="thumbnail">
-                <img src="/images/sample.png" alt="" />
-                <div class="caption">
-                    <h3>We send the messages!</h3>
-                    <p>After a bit of shuffle and sort, we throw at each participant a private message with his peer name and optional admin message.</p>
+    </div>
 
-                    <h3>You enjoy gifts, love and sharing</h3>
-                    <p>Whatever the reason (Christmas is not the only season in the year), Secret Santa is about sharing and having a good time!</p>
-                </div>
-            </div>
+    <div class="sample-message pure-g">
+        <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-2-5">
+            <h2 class="content-head">Private message sent to users</h2>
+
+            <p>
+                Each user will receive a private message to inform them of their peer name.
+                You can provide an optional message to inform your team about budget or deadline.
+            </p>
+        </div>
+        <div class="is-center pure-u-1 pure-u-md-1-1 pure-u-lg-3-5">
+            <img class="pure-img-responsive" alt="Sample message received by users" src="/images/sample.png">
+        </div>
+    </div>
+
+    <div class="content love-block pure-g">
+        <div class="pure-u-1">
+            <h2 class="content-head">Enjoy gifts, love and sharing</h2>
+
+            <p>
+                Whatever the reason (Christmas is not the only season in the year),
+                Secret Santa is about sharing and having a good time!
+            </p>
         </div>
     </div>
 {% endblock content %}
