--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -1,178 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
+        <link rel="stylesheet" href="/style.css">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+        <title>Slack Secret Santa!</title>
+    </head>
+    <body>
 
-    <title>Slack Secret Santa!</title>
-    <style>
-        .list-group { max-height:400px; overflow:auto; border-top:1px solid #DDD; border-bottom:1px solid #DDD; }
-        .list-group > .list-group-item { -moz-user-select: none; -webkit-user-select: none; user-select: none; }
-        .list-group > .list-group-item:hover { cursor: pointer; background-color:#EEE; }
-        .list-group > .list-group-item:first-child { border-top: 0 none; }
-        .list-group > .list-group-item:last-child { border-bottom: 0 none; }
-        .list-group > .list-group-item > * { margin-right:10px; }
-        .list-group > .list-group-item > img { border-radius: 4px; }
+        <canvas id="snow"></canvas>
 
-        /**
-         * Christmas style
-         */
-        html, body {
-            background-color: #c4000a;
-        }
+        <header class="header">
+            <div class="home-menu pure-menu pure-menu-horizontal">
+                <div class="pure-menu-heading">
+                    <a href="{{ path('homepage') }}">
+                        <div class="logo-wrapper">
+                            <img src="/images/logo.png" style="width: 90px;" alt="Secret Santa" />
+                        </div>
+                        <h1>Slack Secret Santa</h1>
+                    </a>
+                </div>
 
-        body > .container {
-            background-color: white;
-            position: relative;
-        }
-        #snow {
-            display: block;
-            position: absolute;
-        }
-
-    </style>
-</head>
-<body>
-
-<canvas id="snow"></canvas>
-
-<div class="container">
-    <a href="{{ path('homepage') }}">
-        <img src="/images/logo.png" class="pull-left" style="width: 120px; padding-top: 10px;" alt="Secret Santa" />
-    </a>
-
-    <h1 style="margin-bottom: 50px;">
-        Slack Secret Santa
-        <br><small>Throw a Secret Santa with your Slack team in a click of a button!</small>
-    </h1>
-
-    {% block content %}
-    {% endblock content %}
-
-    <footer style="margin-top: 100px;">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <p>
-                    <small>
-                        Emoji and logo provided free by <a href="http://emojione.com">Emoji One</a>
-                        &mdash;
-                        Make with ♥ by <a href="http://jolicode.com">JoliCode</a>
-                        &mdash;
-                        This application does not persist anything on disk, does not use web analytics, does not need any registration, does not send spam, does not collect any kind of personal information and is integrally <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>.
-                        &mdash;
-                        Support is available via <a href="https://github.com/jolicode/slack-secret-santa/issues">GitHub</a> or
-                        <a href="https://jolicode.com/contact">private contact</a>.
-                    </small>
-                </p>
+                <ul class="pure-menu-list">
+                    <li class="pure-menu-item">
+                        <a href="https://en.wikipedia.org/wiki/Secret_Santa" class="pure-menu-link">More about Secret Santa</a>
+                    </li>
+                    <li class="pure-menu-item">
+                        <a class="pure-menu-link" href="https://github.com/jolicode/slack-secret-santa/">Fork me on GitHub</a>
+                    </li>
+                    <li class="pure-menu-item">
+                        <a class="pure-menu-link" onclick="goSnow(); return false;" href="">Let it snow!</a>
+                    </li>
+                </ul>
             </div>
+        </header>
+
+        <div class="content-wrapper">
+            {% block content %}
+            {% endblock content %}
+
+            <footer class="footer is-center">
+                <p>
+                    This application does not persist anything on disk, does not use web analytics, does not need any registration, does not send spam, does not collect any kind of personal information and is integrally <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>.
+                </p>
+                <p>
+                    Emoji and logo provided free by <a href="http://emojione.com">Emoji One</a>.
+                </p>
+                <p>
+                    Made with ♥ by <a href="http://jolicode.com">JoliCode</a>
+                    &mdash;
+                    Support is available via <a href="https://github.com/jolicode/slack-secret-santa/issues">GitHub</a> or
+                    <a href="https://jolicode.com/contact">private contact</a>.
+                </p>
+            </footer>
         </div>
-    </footer>
-</div>
 
-<script type="text/javascript">
-    /**
-     * Taken from http://thecodeplayer.com/walkthrough/html5-canvas-snow-effect
-     */
-    var snowStarted = false;
-    window.goSnow = function() {
-        if (snowStarted) {
-            return false;
-        }
+        <script type="text/javascript">
+            /**
+             * Taken from http://thecodeplayer.com/walkthrough/html5-canvas-snow-effect
+             */
+            var snowStarted = false;
+            window.goSnow = function() {
+                if (snowStarted) {
+                    snowStarted = false;
 
-        snowStarted = true;
-        //canvas init
-        var canvas = document.getElementById("snow");
-        var ctx = canvas.getContext("2d");
+                    return false;
+                }
 
-        //canvas dimensions
-        var W = window.innerWidth - 30;
-        var H = window.innerHeight;
-        canvas.width = W;
-        canvas.height = H;
+                snowStarted = true;
+                //canvas init
+                var canvas = document.getElementById("snow");
+                var ctx = canvas.getContext("2d");
 
-        //snowflake particles
-        var mp = 200; //max particles
-        var particles = [];
-        for(var i = 0; i < mp; i++)
-        {
-            particles.push({
-                x: Math.random()*W, //x-coordinate
-                y: Math.random()*H, //y-coordinate
-                r: Math.random()*4+1, //radius
-                d: Math.random()*mp //density
-            })
-        }
+                //canvas dimensions
+                var W = window.innerWidth - 30;
+                var H = window.innerHeight;
+                canvas.width = W;
+                canvas.height = H;
 
-        //Lets draw the flakes
-        function draw()
-        {
-            ctx.clearRect(0, 0, W, H);
-
-            ctx.fillStyle = "rgba(255, 255, 255, 0.8)";
-            ctx.beginPath();
-            for(var i = 0; i < mp; i++)
-            {
-                var p = particles[i];
-                ctx.moveTo(p.x, p.y);
-                ctx.arc(p.x, p.y, p.r, 0, Math.PI*2, true);
-            }
-            ctx.fill();
-            update();
-        }
-
-        //Function to move the snowflakes
-        //angle will be an ongoing incremental flag. Sin and Cos functions will be applied to it to create vertical and horizontal movements of the flakes
-        var angle = 0;
-        function update()
-        {
-            angle += 0.01;
-            for(var i = 0; i < mp; i++)
-            {
-                var p = particles[i];
-                //Updating X and Y coordinates
-                //We will add 1 to the cos function to prevent negative values which will lead flakes to move upwards
-                //Every particle has its own density which can be used to make the downward movement different for each flake
-                //Lets make it more random by adding in the radius
-                p.y += Math.cos(angle+p.d) + 1 + p.r/2;
-                p.x += Math.sin(angle) * 2;
-
-                //Sending flakes back from the top when it exits
-                //Lets make it a bit more organic and let flakes enter from the left and right also.
-                if(p.x > W+5 || p.x < -5 || p.y > H)
+                //snowflake particles
+                var mp = 100; //max particles
+                var particles = [];
+                for(var i = 0; i < mp; i++)
                 {
-                    if(i%3 > 0) //66.67% of the flakes
-                    {
-                        particles[i] = {x: Math.random()*W, y: -10, r: p.r, d: p.d};
+                    particles.push({
+                        x: Math.random()*W, //x-coordinate
+                        y: Math.random()*H, //y-coordinate
+                        r: Math.random()*4+1, //radius
+                        d: Math.random()*mp //density
+                    })
+                }
+
+                //Lets draw the flakes
+                var draw = function()
+                {
+                    if (!snowStarted) {
+                        clearInterval(draw);
+                        ctx.clearRect(0, 0, W, H);
+                        particles.length = 0;
+                        return;
                     }
-                    else
+
+                    ctx.clearRect(0, 0, W, H);
+
+                    ctx.fillStyle = "rgba(255, 255, 255, 0.8)";
+                    ctx.beginPath();
+                    for(var i = 0; i < mp; i++)
                     {
-                        //If the flake is exitting from the right
-                        if(Math.sin(angle) > 0)
+                        var p = particles[i];
+                        ctx.moveTo(p.x, p.y);
+                        ctx.arc(p.x, p.y, p.r, 0, Math.PI*2, true);
+                    }
+                    ctx.fill();
+                    update();
+                }
+
+                //Function to move the snowflakes
+                //angle will be an ongoing incremental flag. Sin and Cos functions will be applied to it to create vertical and horizontal movements of the flakes
+                var angle = 0;
+                var update = function()
+                {
+                    angle += 0.01;
+                    for(var i = 0; i < mp; i++)
+                    {
+                        var p = particles[i];
+                        //Updating X and Y coordinates
+                        //We will add 1 to the cos function to prevent negative values which will lead flakes to move upwards
+                        //Every particle has its own density which can be used to make the downward movement different for each flake
+                        //Lets make it more random by adding in the radius
+                        p.y += Math.cos(angle+p.d) + 1 + p.r/2;
+                        p.x += Math.sin(angle) * 2;
+
+                        //Sending flakes back from the top when it exits
+                        //Lets make it a bit more organic and let flakes enter from the left and right also.
+                        if(p.x > W+5 || p.x < -5 || p.y > H)
                         {
-                            //Enter from the left
-                            particles[i] = {x: -5, y: Math.random()*H, r: p.r, d: p.d};
-                        }
-                        else
-                        {
-                            //Enter from the right
-                            particles[i] = {x: W+5, y: Math.random()*H, r: p.r, d: p.d};
+                            if(i%3 > 0) //66.67% of the flakes
+                            {
+                                particles[i] = {x: Math.random()*W, y: -10, r: p.r, d: p.d};
+                            }
+                            else
+                            {
+                                //If the flake is exitting from the right
+                                if(Math.sin(angle) > 0)
+                                {
+                                    //Enter from the left
+                                    particles[i] = {x: -5, y: Math.random()*H, r: p.r, d: p.d};
+                                }
+                                else
+                                {
+                                    //Enter from the right
+                                    particles[i] = {x: W+5, y: Math.random()*H, r: p.r, d: p.d};
+                                }
+                            }
                         }
                     }
                 }
-            }
-        }
 
-        //animation loop
-        setInterval(draw, 33);
-        return false;
-    }
-</script>
-</body>
+                //animation loop
+                setInterval(draw, 33);
+                return false;
+            }
+        </script>
+    </body>
 </html>
