--- a/views/run.html.twig
+++ b/views/run.html.twig
@@ -1,85 +1,92 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    {% if users %}
-        <form method="post" id="run_form">
-            <div class="form-group{{ errors.users ? ' has-error' : '' }}">
-                <label class="control-label" for="message">Users</label>
-                {% spaceless %}
-                    <div class="list-group checked-list-box">
-                        {% for user in users if not user.isBot and not user.deleted %}
-                            <label class="list-group-item" for="user-{{ user.id }}">
-                                <input type="checkbox"
-                                       {{ user.name in selectedUsers ? 'checked="checked"' : '' }}
-                                       name="users[]"
-                                       value="{{ user.name }}"
-                                       id="user-{{ user.id }}">
-                                <img src="{{ user.profile.image32 }}" alt="{{ user.profile.realName }}" />
-                                <span>{{ user.profile.realName }} ({{ user.name }})</span>
-                            </label>
-                        {% endfor %}
-                    </div>
-                {% endspaceless %}
-                {% if errors.users %}
-                    <span class="help-block alert alert-danger">{{ errors.users|join('<br />') }}</span>
-                {% endif %}
-            </div>
-
-            <div class="form-group">
-                <label class="control-label" for="message">Custom message</label>
-                <textarea name="message" id="message" class="form-control" rows="3">{{ message }}</textarea>
-                <p class="help-block">Anything you want, but this is the right place to give a deadline and a price limit!</p>
-            </div>
-
-            <div class="panel panel-default">
-                <div class="panel-heading">What happens next?</div>
-                <div class="panel-body">
-                    <p>
-                        We are going to shuffle selected users and send them all a private message in Slack, looking like this:
-                    </p>
-
-                    <p class="text-center">
-                        <img src="/images/sample.png" alt="Slack Secret Santa Sample" class="img-thumbnail" />
-                    </p>
-
-                    <p>
-                        Anything else is up to you, have fun!
-                    </p>
+    <div class="run-block">
+        {% if users|length >= 2 %}
+            <form method="post" id="run_form">
+                <div class="user-field">
+                    <h2>Select the participants of your Secret Santa</h2>
+                    {% if errors.users %}
+                        <span class="error">{{ errors.users|join('<br />') }}</span>
+                    {% endif %}
+                    {% spaceless %}
+                        <div class="user-list">
+                            {% for user in users if not user.isBot and not user.deleted %}
+                                <label class="user-item" for="user-{{ user.id }}">
+                                    <input type="checkbox"
+                                           {{ user.name in selectedUsers ? 'checked="checked"' : '' }}
+                                           name="users[]"
+                                           value="{{ user.name }}"
+                                           id="user-{{ user.id }}">
+                                    <img src="{{ user.profile.image32 }}" alt="{{ user.profile.realName }}" />
+                                    <span>{{ user.profile.realName }} ({{ user.name }})</span>
+                                </label>
+                            {% endfor %}
+                        </div>
+                    {% endspaceless %}
                 </div>
+
+                <div class="message-field">
+                    <h2>
+                        <label class="control-label" for="message">Write an optionnal message</label>
+                    </h2>
+
+                    <textarea name="message" id="message" rows="3">{{ message }}</textarea>
+                    <p class="help">Anything you want, but this is the right place to give a deadline and a price limit!</p>
+                </div>
+
+                <div class="next">
+                    <h2>What happens next?</h2>
+                    <div>
+                        <p>
+                            We are going to shuffle selected users and send them a private message in Slack, looking like this:
+                        </p>
+
+                        <div class="is-center">
+                            <img class="pure-img-responsive" alt="Sample message received by users" src="/images/sample.png">
+                        </div>
+
+                        <p>
+                            Anything else is up to you, have fun!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="is-center">
+                    <button type="submit" class="btn-submit" id="run_btn">
+                        <span class="fa fa-paper-plane" aria-hidden="true"></span>
+                        Finish and send Secret Santa messages!
+                    </button>
+                </div>
+
+            </form>
+
+            <script type="text/javascript">
+                /**
+                 * I did know this is a global and I feel bad.
+                 * Next time I will install 10mb of npm and react javascript to switch a flag :)
+                 *
+                 * @type {boolean}
+                 */
+                var secretSantaFormSubmitted = false;
+
+                /**
+                 * Prevent the multi-submit of the form
+                 */
+                document.getElementById('run_form').addEventListener("submit", function(e) {
+                    if (secretSantaFormSubmitted) {
+                        e.preventDefault();
+                    } else {
+                        secretSantaFormSubmitted = true;
+                        document.getElementById('run_btn').disabled = true;
+                        document.getElementById('run_btn').children[0].className = 'fa fa-hourglass-start';
+                    }
+                }, false);
+            </script>
+        {% else %}
+            <div class="error" role="alert">
+                Ooops, we didn't find enough users in your Slack team. You need at least 2 users to start a Secret Santa.
             </div>
-
-            <div class="text-center">
-                <button type="submit" class="btn btn-danger btn-lg" id="run_btn">
-                    <span class="glyphicon glyphicon-send" aria-hidden="true"></span>
-                        Send Secret Santa messages!
-                </button>
-            </div>
-
-        </form>
-
-        <script type="text/javascript">
-            /**
-             * I did know this is a global and I feel bad.
-             * Next time I will install 10mb of npm and react javascript to switch a flag :)
-             *
-             * @type {boolean}
-             */
-            var secretSantaFormSubmitted = false;
-
-            /**
-             * Prevent the multi-submit of the form
-             */
-            document.getElementById('run_form').addEventListener("submit", function(e) {
-                if (secretSantaFormSubmitted) {
-                    e.preventDefault();
-                } else {
-                    secretSantaFormSubmitted = true;
-                    document.getElementById('run_btn').disabled = true;
-                    document.getElementById('run_btn').children[0].className = 'glyphicon glyphicon-hourglass';
-                }
-            }, false);
-        </script>
-    {% else %}
-        <div class="alert alert-danger" role="alert">No user found.</div>
-    {% endif %}
+        {% endif %}
+    </div>
 {% endblock content %}
