Add a "Why" block inspired from the old content :pencil:

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -69,6 +69,21 @@
         </div>
     </div>
 
+    <div class="content why-block">
+        <h2 class="content-head is-center">Why do I need this app?</h2>
+
+        <p>
+            At <a href="https://jolicode.com/">JoliCode</a>, we do a Secret Santa every year. Before this application,
+            we had to ask someone from outside the company to be our "Secret Santa", running a script to dispatch users
+            and sending emails to everyone.
+        </p>
+
+        <p>
+            This time is gone! Because all our collaborators are on Slack, we can just select them from this interface
+            and the application does all the work to shuffle users and to informe them of their peer name.
+        </p>
+    </div>
+
     <div class="content love-block pure-g">
         <div class="pure-u-1">
             <h2 class="content-head">Enjoy gifts, love and sharing</h2>
