Customize error pages :yum:

--- a/Resources/views/finish.html.twig
+++ b/Resources/views/finish.html.twig
@@ -31,7 +31,7 @@
             {% endif %}
 
             <div class="is-center">
-                <a href="{{ path('run') }}" class="btn-submit">
+                <a href="{{ path('run') }}" class="big-button">
                     <span class="fa fa-repeat" aria-hidden="true"></span>
                     Start another Secret Santa
                 </a>
