--- a/Resources/views/run.html.twig
+++ b/Resources/views/run.html.twig
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="is-center">
-                    <button type="submit" class="btn-submit" id="run_btn">
+                    <button type="submit" class="big-button" id="run_btn">
                         <span class="fa fa-paper-plane" aria-hidden="true"></span>
                         Finish and send Secret Santa messages!
                     </button>
